Fixed column gap spacing.

--- a/styles.sass
+++ b/styles.sass
@@ -82,6 +82,7 @@ main
 
 #content
     column-count:   1
+    column-gap:     calc($spacing-md * 2)
     column-rule:    solid 5px $purple
     font-family:    "Urbanist", sans-serif
     font-size:      100px
